# Tiny-BrainFuck

./: .gitignore  README.md  meson.build
src/: brainfuck.c  defs.asm  defs.h  linux.asm  native.h
